# NetReport

./: .gitignore  README.md  config.json  setup.cfg
net_check/: __init__.py  colors.py  config.py  host.py  results.py
net_report/: __init__.py  args.py  config.py  host.py  results.py
tests/: configs.py  test_args.py  test_config.py
