[metadata]
name = NetCheck
version = attr: net_check.__version__
description = Quick view into server status
long_description = file: README.md
author = samfelt
url = https://github.com/samfelt/NetCheck
license_files = LICENSE.txt
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:
install_requires =
    icmplib>=3.0.4

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts = 
    netcheck = net_check.__init__:main

